kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudkite-gke-app
  namespace: cloudkite-gke-app-ns
  labels:
    app: cloudkite-gke-app
    app.kubernetes.io/instance: cloudkite-interview-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      app: cloudkite-gke-app
      app.kubernetes.io/instance: cloudkite-interview-deploy
  template:
    metadata:
      labels:
        app: cloudkite-gke-app
        app.kubernetes.io/instance: cloudkite-interview-deploy
    spec:
      containers:
        - name: cloudkite-martin-image
          image: gcr.io/cloudkite-interviews-martin/cloudkite-martin-image:4e8fb4b
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cloudkite-gke-app-service
  namespace: cloudkite-gke-app-ns
  labels:
    app: cloudkite-gke-app
    app.kubernetes.io/instance: cloudkite-interview-deploy
spec:
  type: NodePort
  selector:
    app: cloudkite-gke-app
    app.kubernetes.io/instance: cloudkite-interview-deploy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudkite-gke-app-ingress
  namespace: cloudkite-gke-app-ns
  annotations:
    kubernetes.io/ingress.global-static-ip-name: martin-interview-ip
    networking.gke.io/managed-certificates: cloudkite-gke-app-cert
    kubernetes.io/ingress.class: gce
  labels:
    app: cloudkite-gke-app
    app.kubernetes.io/instance: cloudkite-interview-deploy
spec:
  defaultBackend:
    service:
      name: cloudkite-gke-app-service
      port:
        number: 8080
